# VEND

./: CMakeLists.txt  README.md  main.cpp
scripts/: execute.sh  sample.sh
src/: a.txt  b.txt
src/dbengine/: rocksdb.cpp
src/encode/: hash_count.cpp
src/encode/bfilter/: bfilter_bit_encode.cpp  bfilter_int_encode.cpp  cbfilter_encode.cpp
src/encode/single/: hybrid_delta_encode.cpp  hybrid_delta_encode.h  hybrid_encode.cpp  range_encode.cpp
src/execution/: pair_list.cpp  score_execution.cpp
src/graph/: graph.cpp  large_graph.cpp
src/include/common/: config.cpp  config.gsh.h  config.h  hash_config.cpp  hash_config.h
src/include/dbengine/: dbengine.h  rocksdb.h
src/include/encode/: encode.h  hash_count.h
src/include/encode/SIMD/: delta_simd_encode.h  simd_encode.h
src/include/encode/bfilter/: bbfilter_encode.h  bfilter_bit_encode.h  bfilter_encode.h  bfilter_int_encode.h  cbfilter_encode.h
src/include/encode/codec/: codec.h  varint_codec.h
src/include/encode/codec/SIMD/: delta_simd_codec.cpp  delta_simd_codec.h  simd_common.h
src/include/encode/single/: bithash_encode.h  bloom_encode.h  compression.h  count_encode.h  directed_hybrid.h  directed_simd.h  encode_bitset.h  hybrid_encode.h  range_com_encode.h  range_encode.h
src/include/execution/: build_execution.h  delete_execution.h  execution.h  full_score_execution.h  insert_delete_execution.h  insert_execution.h  memory_test.h  pair_list.h  query_execution.h  random_query_execution.h  random_score_execution.h  score_execution.h  triangle_execution.h
src/include/graph/: graph.h  large_graph.h
src/include/thirdpart/: CLI11.hpp
src/include/thirdpart/rocksdb/utilities/: backupable_db.h  regex.h
src/include/util/: bitset.h  bitset_simd.h  json.cpp  timer.h  utils.h
src/include/vend/: bf_bit_vend.h  bf_int_vend.h  bit_hash_vend.h  bloom_vend.h  count_vend.h  delta_simd_vend.h  dir_hyb_vend.h  dir_simd_vend.h  hybrid_delta_vend.h  hybrid_vend.h  range_com_vend.h  range_vend.h  vend.h  vend_factory.h
src/vend/: delta_simd_vend.cpp  dir_hyb_vend.cpp  dir_simd_vend.cpp  range_com_vend.cpp  range_vend.cpp
